added more details

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Portfolio</title>
+    <title>Ujjal Kakati - Portfolio</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         /* Global Styles */
@@ -440,7 +440,7 @@
     <header>
         <div class="container">
             <nav class="navbar">
-                <a href="#" class="logo">YourName</a>
+                <a href="#" class="logo">Ujjak Kakati</a>
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -458,8 +458,8 @@
     <section id="home" class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1>Hi, I'm Your Name</h1>
-                <p>A passionate developer creating amazing digital experiences. Welcome to my portfolio website where I showcase my projects and skills.</p>
+                <h1>Hi, Ujjal Kakati</h1>
+                <p>An individual with experience collecting, transforming, and organizing data for analysis to help make informed decisions. </p>
                 <div class="hero-btns">
                     <a href="#projects" class="btn">View My Work</a>
                     <a href="#contact" class="btn btn-outline">Get In Touch</a>
@@ -475,24 +475,24 @@
             <div class="about-content">
                 <div class="about-img">
                     <!-- Replace with your actual image path -->
-                    <img src="https://via.placeholder.com/400x500" alt="Your Name">
+                    <img src="https://via.placeholder.com/400x500" alt="Ujjal Kakati">
                 </div>
                 <div class="about-text">
-                    <h3>Hello! I'm Your Name</h3>
-                    <p>I'm a passionate developer with experience in creating web applications and digital solutions. I enjoy turning complex problems into simple, beautiful designs.</p>
-                    <p>My journey in web development started 3 years ago and since then I've worked on various projects ranging from simple websites to complex web applications.</p>
-                    <p>When I'm not coding, you can find me exploring new technologies, reading tech blogs, or enjoying outdoor activities.</p>
+                    <h3>Hello! I'm Ujjal Kakati</h3>
+                    <p>A physics undergraduate at Morigaon College with a passion for exploring the intersection of science and data. Guided by curiosity, I’m transitioning into data analytics, driven by a desire to uncover insights that bridge theoretical concepts and real-world challenges.</p>
+                    <p>Inspired by global opportunities and lifelong learning, my career aims to combine analytical thinking with a commitment to positive impact.</p>
+                    <p>I’m always excited to connect, collaborate, and grow alongside others who share these values.</p>
                     
                     <h4>My Skills</h4>
                     <div class="skills">
-                        <span class="skill-tag">HTML</span>
-                        <span class="skill-tag">CSS</span>
-                        <span class="skill-tag">JavaScript</span>
-                        <span class="skill-tag">React</span>
-                        <span class="skill-tag">Node.js</span>
+                        <span class="skill-tag">Python</span>
+                        <span class="skill-tag">Microsoft Excel</span>
+                        <span class="skill-tag">Tableau</span>
+                        <span class="skill-tag">SQL</span>
+                        <span class="skill-tag">Analytical Thinking</span>
                         <span class="skill-tag">Git</span>
-                        <span class="skill-tag">Responsive Design</span>
-                        <span class="skill-tag">UI/UX</span>
+                        <span class="skill-tag">LaTeX</span>
+                        <span class="skill-tag">Power BI</span>
                     </div>
                 </div>
             </div>
@@ -564,7 +564,7 @@
                         </div>
                         <div>
                             <h3>Email</h3>
-                            <p>yourname@example.com</p>
+                            <p>iujjalkakati@gmail.com</p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -573,7 +573,7 @@
                         </div>
                         <div>
                             <h3>Phone</h3>
-                            <p>+1 (123) 456-7890</p>
+                            <p>+91 7099747599</p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -582,14 +582,14 @@
                         </div>
                         <div>
                             <h3>Location</h3>
-                            <p>Your City, Country</p>
+                            <p>Morigaon, Assam, India</p>
                         </div>
                     </div>
                 </div>
                 <div class="contact-form">
                     <form id="contactForm">
                         <div class="form-group">
-                            <label for="name">Your Name</label>
+                            <label for="name">Ujjal Kakati</label>
                             <input type="text" id="name" class="form-control" placeholder="Enter your name" required>
                         </div>
                         <div class="form-group">
@@ -612,8 +612,8 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <h2>YourName</h2>
-                    <p>Creating amazing digital experiences</p>
+                    <h2>Ujjal Kakati</h2>
+                    <p>Creating amazing digital experiences and interective designs</p>
                 </div>
                 <div class="social-links">
                     <a href="#" class="social-link"><i class="fab fa-github"></i></a>
@@ -623,7 +623,7 @@
                 </div>
             </div>
             <div class="copyright">
-                <p>&copy; 2023 Your Name. All Rights Reserved.</p>
+                <p>&copy; 2023 Ujjal Kakati. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
