--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
                 <!-- Project 1 -->
                 <div class="project-card">
                     <div class="project-img">
-                        <img src="https://via.placeholder.com/400x250" alt="Project 1">
+                        <img src="assets/20250704_095329 (1)-photoaidcom-cropped.jpg" alt="Project 1">
                     </div>
                     <div class="project-info">
                         <h3>E-Commerce Website</h3>
