--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
             <div class="about-content">
                 <div class="about-img">
                     <!-- Replace with your actual image path -->
-                    <img src="https://via.placeholder.com/400x500" alt="Ujjal Kakati">
+                    <img src="assets/20250704_095329 (1)-photoaidcom-cropped.jpg" alt="Ujjal Kakati">
                 </div>
                 <div class="about-text">
                     <h3>Hello! I'm Ujjal Kakati</h3>
