--- a/index.html
+++ b/index.html
@@ -191,22 +191,28 @@
             align-items: center;
         }
 
-        .about-img {
-            border-radius: 10px;
-            overflow: hidden;
-            box-shadow: var(--shadow);
-        }
+        /* Round About Image */
+       .about-img-round {
+           width: 300px;
+           height: 300px;
+           border-radius: 50%;
+           overflow: hidden;
+           box-shadow: var(--shadow);
+           margin: 0 auto;
+           border: 5px solid var(--secondary-color);
+       }
 
-        .about-img img {
-            width: 100%;
-            height: auto;
-            display: block;
-            transition: var(--transition);
-        }
+       .about-img-round img {
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
+          display: block;
+          transition: var(--transition);
+      }
 
-        .about-img:hover img {
-            transform: scale(1.05);
-        }
+      .about-img-round:hover img {
+          transform: scale(1.1);
+      }
 
         .skills {
             display: flex;
