added round image

--- a/index.html
+++ b/index.html
@@ -479,8 +479,7 @@
         <div class="container">
             <h2 class="section-title">About Me</h2>
             <div class="about-content">
-                <div class="about-img">
-                    <!-- Replace with your actual image path -->
+                <div class="about-img-round">
                     <img src="assets/20250704_095329 (1)-photoaidcom-cropped.jpg" alt="Ujjal Kakati">
                 </div>
                 <div class="about-text">
