Change project title and update image link
Updated project details and image source in the portfolio.

--- a/index.html
+++ b/index.html
@@ -512,12 +512,12 @@
                 <!-- Project 1 -->
                 <div class="project-card">
                     <div class="project-img">
-                        <img src="assets/20250704_095329 (1)-photoaidcom-cropped.jpg" alt="Project 1">
+                        <img src="https://github.com/Ujjalkakati/Portfolio/blob/main/assets/Screenshot%202025-10-17%20205135.png?raw=true" alt="Project 1">
                     </div>
                     <div class="project-info">
-                        <h3>E-Commerce Website</h3>
+                        <h3>Lotka-Volterra Predator–Prey Model Simulation</h3>
                         <p>A fully responsive e-commerce website with product listings, cart functionality, and secure checkout.</p>
-                        <div class="project-links">
+                        <div class="https://github.com/Ujjalkakati/Lotka_Volterra_Predator_Prey_Model_Simulation/tree/main">
                             <a href="#" class="btn">Live Demo</a>
                             <a href="#" class="btn btn-outline">GitHub</a>
                         </div>
